@@ -33,5 +33,14 @@
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
 		/>
+		
+	<!-- Render the browser title -->
+    <browser:viewlet
+        name="plone.htmlhead.title"
+        manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+        class=".viewlets.PerSEOTitleTagViewlet"
+        layer=".interfaces.IPerSEOLayer"
+        permission="zope2.View"
+        />
 
 </configure>
