@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <object>
   <order manager="plone.htmlhead" skinname="*">
-    <viewlet name="collective.perseo.metatags" />
+	<viewlet name="plone.htmlhead.title" />
+	<viewlet name="collective.perseo.metatags" />
   </order>
 </object>
